# vtuber-schedule

./: .gitignore  README.md
archiver/: .pylintrc  pyproject.toml
archiver/crawler/: __init__.py  logger.py
archiver/crawler/tasks/: channel_Info.py  pydantic_dataclasses.py  video_status.py  videolist_nijisanji.py  videolist_rss.py
archiver/db/: __init__.py  connect.py  dev.db
archiver/db/models/: models.py
archiver/db/seed/: __init__.py  pydantic_classes.py  seed_db.py
archiver/db/seed/json/: hololive.json  nijisanji.json
archiver/modules/: env.py  logger.py  youtube.py
backend/: .env.example  .gitignore  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20220624070654_dev/: migration.sql
backend/prisma/seed/: index.ts
backend/prisma/seed/json/: hololive.json  nijisanji.json
backend/src/: app.ts
backend/src/plugins/: fastify-cors.ts  fastify-helmet.ts  fastify-static.ts  prisma.ts  youtube.ts
backend/src/routes/: root.ts
backend/src/routes/api/: channel.ts  group.ts  (+3 more)
backend/test/: helper.ts
backend/test/crawler/: crawlerHelper.ts  index.test.ts  itsakuralink-api.test.ts  stream-list-feed.test.ts  stream-status.test.ts
backend/test/routes/: channel.test.ts  group.test.ts  lastUpdatedAt.test.ts  organization.test.ts  root.test.ts  stream.test.ts
client/: routing.md
client/src/: App.tsx  styles.css
client/src/api/: refresh.ts
client/src/types/: types.ts
frontend/: package.json
frontend/src/: App.tsx  index.tsx  styles.css
frontend/src/api/: refresh.ts
frontend/src/types/: types.ts
(+32 files in other folders)
